# wallet-watch-rust

./: Cargo.toml
src/: main.rs
src/dto/: user_dto.rs
src/entity/: user.rs
src/handler/: user.rs
src/routes/: mod.rs  root.rs  user.rs
src/state/: app_state.rs
src/utils/: db_connect.rs  mod.rs  validation_error_to_json.rs
