[package]
name = "wallet-watch"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
tokio = { version = "1.41.1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
tower = "0.5.1"
mongodb = {version = "3.1.0", features = ["sync"]}
validator = { version = "0.19", features = ["derive"] }
tower-http = { version = "0.6.1", features = ["trace"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1.40"
